we do not need an action for deleting all links
of the selected processes, how would that make
sense?