@@ -1,12 +1,11 @@
 package org.openlca.app.editors.graphical.actions;
 
-import static org.openlca.app.editors.graphical.requests.GraphRequestConstants.REQ_REMOVE_CHAIN;
+import static org.openlca.app.editors.graphical.requests.GraphRequestConstants.*;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 
-import org.eclipse.gef.EditPart;
 import org.eclipse.gef.GraphicalViewer;
 import org.eclipse.gef.Request;
 import org.eclipse.gef.commands.Command;
@@ -20,14 +19,14 @@ import org.openlca.app.rcp.images.Icon;
 import org.openlca.core.model.FlowType;
 import org.openlca.core.model.ProcessLink;
 
-public class RemoveSupplyChainAction extends SelectionAction {
+public class RemoveProcessChainAction extends SelectionAction {
 
 	public static final String KEY_LINKS = "links";
 	private final GraphEditor editor;
 
-	public RemoveSupplyChainAction(GraphEditor part) {
-		super(part);
-		editor = part;
+	public RemoveProcessChainAction(GraphEditor editor) {
+		super(editor);
+		this.editor = editor;
 		setId(GraphActionIds.REMOVE_SUPPLY_CHAIN);
 		setImageDescriptor(Icon.REMOVE_SUPPLY_CHAIN.descriptor());
 	}
@@ -47,11 +46,10 @@ public class RemoveSupplyChainAction extends SelectionAction {
 		if (getSelectedObjects().isEmpty())
 			return null;
 
-		var viewer = (GraphicalViewer) getWorkbenchPart().getAdapter(
-				GraphicalViewer.class);
+		var viewer = getWorkbenchPart().getAdapter(GraphicalViewer.class);
 		var registry = viewer.getEditPartRegistry();
-		var graphEditPart = (EditPart) registry.get(editor.getModel());
-		if (graphEditPart == null)
+		var graphPart = registry.get(editor.getModel());
+		if (graphPart == null)
 			return null;
 
 		var links = new ArrayList<ProcessLink>();
@@ -66,7 +64,7 @@ public class RemoveSupplyChainAction extends SelectionAction {
 			var data = new HashMap<String, Object>();
 			data.put(KEY_LINKS, links);
 			request.setExtendedData(data);
-			return graphEditPart.getCommand(request);
+			return graphPart.getCommand(request);
 		} else return null;
 	}
 
@@ -76,17 +74,16 @@ public class RemoveSupplyChainAction extends SelectionAction {
 			setText(M.RemoveSupplyChain);
 			var nodeId = ((NodeEditPart) object).getModel().descriptor.id;
 			links.addAll(linkSearch.getConsumerLinks(nodeId));
-		}
-		else if (object instanceof ExchangeEditPart part) {
+		} else if (object instanceof ExchangeEditPart part) {
 			setText(M.RemoveFlowSupplyChain);
 			var e = part.getModel().exchange;
 			if ((e.flow.flowType == FlowType.WASTE_FLOW && !e.isInput)
-					|| (e.flow.flowType == FlowType.PRODUCT_FLOW && e.isInput)) {
+				|| (e.flow.flowType == FlowType.PRODUCT_FLOW && e.isInput)) {
 				var connection = part.getModel().getAllConnections();
 				// there should only one link to a waste output or product input.
 				if (connection.size() != 1)
 					return;
-				if (connection.get(0) instanceof GraphLink link)
+				if (connection.getFirst() instanceof GraphLink link)
 					links.add(link.processLink);
 			}
 		}
